Add a sample environment file

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ backcall==0.1.0
 black==18.9b0
 Click==7.0
 decorator==4.3.0
-Django==2.1.1
+django>=2.1.2
 djangorestframework==3.8.2
 ipdb==0.11
 ipython==6.5.0
