--- a/.env-sample
+++ b/.env-sample
@@ -18,3 +18,9 @@ DB_HOST="db_host"
 # Only used for initial setup
 POSTGRES_ADMIN_PASSWORD="db_admin_password"
 APP_SERVICE_NAME="connect-python-azure-test"
+
+# Required for error emails
+SEND_ADMIN_EMAILS="true"
+EMAIL_HOST_USER="your-email-account"
+EMAIL_HOST_PASSWORD="your-email-password"
+ADMIN_EMAIL_TO="email-target-account"
