Use a different app service name

--- a/.env-sample
+++ b/.env-sample
@@ -17,7 +17,7 @@ DB_HOST="db_host"
 # One-time use variables
 # Only used for initial setup
 POSTGRES_ADMIN_PASSWORD="db_admin_password"
-APP_SERVICE_NAME="connect-python-azure-test"
+APP_SERVICE_NAME="connect-python-azure"
 
 # Required for error emails
 SEND_ADMIN_EMAILS="true"
